chore: rework delegation to process web-context