@@ -1,14 +1,15 @@
 package org.apereo.cas.entity;
 
 import org.apereo.cas.authentication.principal.ClientCustomPropertyConstants;
+import org.apereo.cas.pac4j.client.DelegatedIdentityProviders;
 import org.apereo.cas.util.LoggingUtils;
 import org.apereo.cas.util.ResourceUtils;
+import org.apereo.cas.util.function.FunctionUtils;
 import org.apereo.cas.util.io.FileWatcherService;
 import org.apereo.cas.util.serialization.JacksonObjectMapperFactory;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.common.collect.Iterables;
-import lombok.Getter;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
 import net.shibboleth.shared.resolver.CriteriaSet;
@@ -18,9 +19,12 @@ import org.opensaml.saml.criterion.EntityRoleCriterion;
 import org.opensaml.saml.ext.saml2mdui.UIInfo;
 import org.opensaml.saml.saml2.metadata.EntityDescriptor;
 import org.opensaml.saml.saml2.metadata.IDPSSODescriptor;
+import org.pac4j.jee.context.JEEContext;
 import org.pac4j.saml.client.SAML2Client;
 import org.springframework.beans.factory.DisposableBean;
 import org.springframework.core.io.Resource;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import java.io.InputStreamReader;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
@@ -29,6 +33,7 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 /**
  * This is {@link SamlIdentityProviderEntityParser}.
@@ -41,8 +46,9 @@ public class SamlIdentityProviderEntityParser implements DisposableBean {
     private static final ObjectMapper MAPPER = JacksonObjectMapperFactory.builder()
         .defaultTypingEnabled(false).build().toObjectMapper();
 
-    @Getter
-    private final Set<SamlIdentityProviderEntity> identityProviders = new LinkedHashSet<>();
+    private final Set<SamlIdentityProviderEntity> identityProviderEntities = new LinkedHashSet<>();
+
+    private DelegatedIdentityProviders identityProviders;
 
     private FileWatcherService discoveryFeedResourceWatchers;
 
@@ -66,14 +72,43 @@ public class SamlIdentityProviderEntityParser implements DisposableBean {
     }
 
     public SamlIdentityProviderEntityParser(final List<SamlIdentityProviderEntity> entity) {
-        identityProviders.addAll(entity);
+        identityProviderEntities.addAll(entity);
+    }
+
+    public SamlIdentityProviderEntityParser(final DelegatedIdentityProviders identityProviders) {
+        this.identityProviders = identityProviders;
+    }
+
+    /**
+     * Resolve entities set.
+     *
+     * @param request  the request
+     * @param response the response
+     * @return the set
+     */
+    public Set<SamlIdentityProviderEntity> resolveEntities(final HttpServletRequest request, final HttpServletResponse response) {
+        val finalEntities = new LinkedHashSet<>(identityProviderEntities);
+
+        if (identityProviders != null) {
+            val context = new JEEContext(request, response);
+            val allClients = identityProviders.findAllClients(context);
+            finalEntities.addAll(allClients
+                .stream()
+                .filter(SAML2Client.class::isInstance)
+                .map(SAML2Client.class::cast)
+                .map(SamlIdentityProviderEntityParser::fromClient)
+                .map(parser -> parser.resolveEntities(request, response))
+                .flatMap(Set::stream)
+                .collect(Collectors.toSet()));
+        }
+        return finalEntities;
     }
 
     /**
      * Clear providers.
      */
     public void clear() {
-        identityProviders.clear();
+        identityProviderEntities.clear();
     }
 
     /**
@@ -88,7 +123,7 @@ public class SamlIdentityProviderEntityParser implements DisposableBean {
                 try (val reader = new InputStreamReader(resource.getInputStream(), StandardCharsets.UTF_8)) {
                     val ref = new TypeReference<List<SamlIdentityProviderEntity>>() {
                     };
-                    identityProviders.addAll(MAPPER.readValue(JsonValue.readHjson(reader).toString(), ref));
+                    identityProviderEntities.addAll(MAPPER.readValue(JsonValue.readHjson(reader).toString(), ref));
                 }
                 return true;
             }
@@ -110,9 +145,8 @@ public class SamlIdentityProviderEntityParser implements DisposableBean {
      *
      * @param client the client
      * @return the saml identity provider entity parser
-     * @throws Exception the exception
      */
-    public static SamlIdentityProviderEntityParser fromClient(final SAML2Client client) throws Exception {
+    public static SamlIdentityProviderEntityParser fromClient(final SAML2Client client) {
         LOGGER.trace("Initializing SAML2 identity provider [{}]", client.getName());
         client.init();
         val entities = determineEntityDescriptors(client)
@@ -121,7 +155,7 @@ public class SamlIdentityProviderEntityParser implements DisposableBean {
             .map(entityDescriptor -> {
                 val entity = new SamlIdentityProviderEntity();
                 entity.setEntityID(entityDescriptor.getEntityID());
-                
+
                 val idpSSODescriptor = entityDescriptor.getIDPSSODescriptor(SAMLConstants.SAML20P_NS);
                 Optional.ofNullable(idpSSODescriptor)
                     .map(IDPSSODescriptor::getExtensions)
@@ -161,14 +195,16 @@ public class SamlIdentityProviderEntityParser implements DisposableBean {
         return new SamlIdentityProviderEntityParser(entities);
     }
 
-    private static List<EntityDescriptor> determineEntityDescriptors(final SAML2Client saml2Client) throws Exception {
-        val idpMetadataResolver = saml2Client.getIdentityProviderMetadataResolver();
-        val metadataResolver = idpMetadataResolver.resolve();
-        val providers = metadataResolver.resolve(new CriteriaSet(new EntityRoleCriterion(IDPSSODescriptor.DEFAULT_ELEMENT_NAME)));
-        if (Iterables.size(providers) == 1
-            && idpMetadataResolver.getEntityDescriptorElement() instanceof final EntityDescriptor entityDescriptor) {
-            return List.of(entityDescriptor);
-        }
-        return Arrays.asList(Iterables.toArray(providers, EntityDescriptor.class));
+    private static List<EntityDescriptor> determineEntityDescriptors(final SAML2Client saml2Client) {
+        return FunctionUtils.doUnchecked(() -> {
+            val idpMetadataResolver = saml2Client.getIdentityProviderMetadataResolver();
+            val metadataResolver = idpMetadataResolver.resolve();
+            val providers = metadataResolver.resolve(new CriteriaSet(new EntityRoleCriterion(IDPSSODescriptor.DEFAULT_ELEMENT_NAME)));
+            if (Iterables.size(providers) == 1
+                && idpMetadataResolver.getEntityDescriptorElement() instanceof final EntityDescriptor entityDescriptor) {
+                return List.of(entityDescriptor);
+            }
+            return Arrays.asList(Iterables.toArray(providers, EntityDescriptor.class));
+        });
     }
 }
